# bevy_jam3_frank

./: Cargo.toml  index.html
assets/: enemy_bomb.aseprite  enemy_bomb.titan  enemy_bomb.trickfilm  health_drop.aseprite  pill.aseprite  player.aseprite  tile.aseprite
src/: background.rs  camera.rs  collision.rs  damage.rs  enemy.rs  heal.rs  main.rs  movement.rs  projectile.rs  ui.rs
src/enemy/: bomb.rs  mod.rs
src/player/: input.rs  mod.rs
src/side_effects/: mod.rs
src/side_effects/buffs/: mod.rs
src/side_effects/debuffs/: damage_on_move.rs  dead.rs  mod.rs
src/stats/: base.rs  mod.rs  offense.rs
