[package]
name = "bevy_jam3_frank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_rapier2d = "0.21"
bevy_trickfilm = "0.2"
bevy_titan = "0.2"

[profile.release]
opt-level = 'z'
lto = "thin"
